<resources>
    <string name="app_name">Alonar</string>
    <string name="hp">100</string>
    <string name="mp">100</string>
    <string name="knife">knife</string>
    <string name="choose_target_enemy">Choose target</string>
    <string name="game_log">Game Log</string>
    <string name="inventory">inventory</string>
    <string name="person">person</string>
    <string name="quest">quest</string>
    <string name="map">map</string>
    <string name="personage">Personage</string>
    <string name="to_game">To game</string>
    <string name="vertical_separator">|</string>
    <string name="nearby_enemies">Nearby enemies:</string>
</resources>