<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/gamefield_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_centerInParent="true"
>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/khaki"/>
    <LinearLayout
            android:id="@+id/main_vitality_linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
    >
        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/hp"/>
        <TextView
                android:id="@+id/main_hp_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:text="@string/hp"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/mp"/>
        <TextView
                android:id="@+id/main_mp_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:text="@string/mp"/>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/khaki"/>
    <LinearLayout
            android:id="@+id/main_slots_linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0dp"
    >
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_slot_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/knife_0"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_slot_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/fire"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_slot_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/fire_flash"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_slot_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/frost_ball"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_slot_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/mind"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_slot_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/frost_spear"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_slot_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/strength_of_mind"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_slot_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/frost_shield"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_slot_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/pillar_of_fire"/>
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/main_slot_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/frost_ring"/>
    </LinearLayout>

    <TextView
            android:id="@+id/main_chooseenemy_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_target_enemy"
            android:textColor="@color/text_color"
            android:gravity="center_horizontal"
            android:visibility="gone"
    />
    <LinearLayout
            android:id="@+id/main_enemies_linearlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
    >

    </LinearLayout>

    <GridLayout
            android:id="@+id/main_map_gridlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border_color"
    >
<!--    Нужно для отрисовки карты из кода    -->
        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/hero_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="2"
        />

    </GridLayout>

    <LinearLayout
            android:id="@+id/gamefield_nearbyenemies_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    >
    </LinearLayout>
</LinearLayout>